fix z-index for list of languages with banner-info

--- a/public/assets/sass/layouts/_channel_call.scss
+++ b/public/assets/sass/layouts/_channel_call.scss
@@ -144,7 +144,6 @@ div.section.banner-header{
         
         position: absolute;
         bottom: 27%;
-        z-index: 150;
         color: $color-white;
         width: 100%;
         span.title{
